[tool.poetry]
name = "pybackup"
version = "0.1.0"
description = ""
authors = ["scratchyone <scratchywon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
google-cloud = "^0.34.0"
google-cloud-storage = "^1.36.0"
discord-webhook = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
